# xiuxian

./: .env.dev  .env.prod  LICENSE  README.md  bot.py  pyproject.toml  xu.tar
data/.dbeaver/: data-sources.json
data/xiuxian/: db_update.py  name_fast_ctrl.py  xiuxian.db  宗门玩法配置.json  灵根.json  突破概率.json
data/xiuxian/boss掉落物/: boss掉落物.json
data/xiuxian/items_database/: fast_create_new_mixture_table.py  mixture.db
data/xiuxian/place/: 地区.json
data/xiuxian/players/3390806052/: riftinfo.json
data/xiuxian/players/952492472/: moveinfo.json
data/xiuxian/players_database/: limit_data_fast_control.py  limit_database.py
data/xiuxian/work/: 暗杀.json  灵材.json  等级奖励稿.json  镇妖.json
data/xiuxian/丹药/: 丹药.json  天地奇物.json  炼丹丹药.json  炼丹炉.json  礼包.json  神物.json
data/xiuxian/修炼物品/: 聚灵旗.json  道具.json
data/xiuxian/功法/: 主功法.json  功法概率设置.json  神通.json  辅修功法.json
data/xiuxian/装备/: 法器.json  防具.json
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/: __init__.py  xiuxian_config.py  xiuxian_place.py
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_back/: __init__.py  back_util.py  backconfig.py  config.json
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_bank/: __init__.py  bankconfig.py  config.json
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_base/: __init__.py
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_beg/: __init__.py
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_boss/: __init__.py  bossconfig.py  config.json  makeboss.py
xu/plugins/nonebot_plugin_xiuxian_2/xiuxian/xiuxian_buff/: __init__.py  limit.py  two_exp_cd.py
(+60 files in other folders)
