[project]
name = "xu"
version = "0.1.0"
description = "xu"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    { name = "QQ", module_name = "nonebot.adapters.qq" },
    { name = "RedProtocol", module_name = "nonebot.adapters.red" },
    { name = "Satori", module_name = "nonebot.adapters.satori" },
    { name = "DoDo", module_name = "nonebot.adapters.dodo" },
    { name = "RocketChat", module_name = "nonebot.adapters.rocketchat" },
    { name = "Kritor", module_name = "nonebot.adapters.kritor" }
]
plugins = ["nonebot_plugin_localstore"]
plugin_dirs = ["xu/plugins"]
builtin_plugins = ["echo"]
